RESOLVED FIXED201200
GenerateTAPI WebKitLegacy.tbd fails on internal iOS Simulator builds
https://bugs.webkit.org/show_bug.cgi?id=201200
Summary GenerateTAPI WebKitLegacy.tbd fails on internal iOS Simulator builds
Dean Jackson
Reported 2019-08-27 13:45:13 PDT
GenerateTAPI WebKitLegacy.tbd fails on internal iOS Simulator builds
Attachments
Patch (1.44 KB, patch)
2019-08-27 13:47 PDT, Dean Jackson
no flags
Patch (1.52 KB, patch)
2019-08-27 16:07 PDT, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2019-08-27 13:47:34 PDT
Dean Jackson
Comment 2 2019-08-27 16:07:39 PDT
Dean Jackson
Comment 3 2019-08-28 12:51:14 PDT
Radar WebKit Bug Importer
Comment 4 2019-08-28 12:52:19 PDT
mitz
Comment 5 2019-08-28 12:59:38 PDT
Comment on attachment 377396 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=377396&action=review > Source/WebKitLegacy/mac/Misc/WebDownload.h:38 > #import <Foundation/NSURLDownload.h> I don’t see this public header in the latest iOS 13.0 beta SDK. So this doesn’t seem to be a good fix.
Dean Jackson
Comment 6 2019-08-28 18:50:47 PDT
(In reply to mitz from comment #5) > Comment on attachment 377396 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=377396&action=review > > > Source/WebKitLegacy/mac/Misc/WebDownload.h:38 > > #import <Foundation/NSURLDownload.h> > > I don’t see this public header in the latest iOS 13.0 beta SDK. So this > doesn’t seem to be a good fix. Correct. It's a private header. Thanks Dan.
Dean Jackson
Comment 7 2019-08-29 10:21:42 PDT
Reverted in r249281
Note You need to log in before you can comment on or make changes to this bug.