GenerateTAPI WebKitLegacy.tbd fails on internal iOS Simulator builds https://bugs.webkit.org/show_bug.cgi?id=201200

Reviewed by Simon Fraser.

We want to include Foundation/NSURLDownload.h if we're on
a newer iOS.

* Misc/WebDownload.h:

Canonical link: https://commits.webkit.org/214914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249211 268f45cc-cd09-0410-ab3c-d52691b4dbfc